BinaryTreeInorderTraversalTest